# kaggle-fi-pitstop-prediction

./: LSTM.ipynb  LSTM_CPU.ipynb  LSTM_CUDA.ipynb  PROJECT_PLAN.md  TabTransformer_CUDA.ipynb  TabTransformer_FE.ipynb  TabTransformer_HPO.ipynb  base.ipynb  best_lstm.pth  best_lstm_cpu.pth  best_lstm_cuda.pth  best_tabtransformer.pth  data_visualization.ipynb  experiment_log.csv  experiment_log_hpo.xlsx  fastf1.ipynb  gp_by_year.csv  lstm_cpu_results.csv  lstm_cuda_results.csv  presentation_tabtransformer.md  pyproject.toml  submission_lstm_cpu.csv  submission_lstm_cuda.csv  데이터 불러오기 및 피쳐 확인.ipynb
.claude/: experiment_plan.md  experiment_plan_final.md
data/grandfrix_records/: abu_dhabi_all_years.csv
docs/: LSTM_experiment_report.md  TabTransformer_preprocessing_guide.md  TabTransformer_rationale.md  fold_loop_explanation.md
univ_ml/: C289039_유승환_F1_LSTM.ipynb  C289039_유승환_LSTM.ipynb  C289039_유승환_LSTM_실험계획.md  C289039_유승환_TabTransformer_앙상블_실험계획.md  C289039_유승환_최적화.ipynb  TabTransformer.ipynb  TabTransformer_CUDA.ipynb  _build_nb.py  best_lstm.keras  submission_lstm.csv
