[project]
name = "playground-series-s6e5"
version = "0.1.0"
description = ""
authors = [
    {name = "dellyu03",email = "seunghwan081@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (<3.0.0)",
    "fastf1 (>=3.8.3,<4.0.0)",
    "meteostat (>=2.1.4) ; python_version >= \"3.13\" and python_version < \"4.0\"",
    "geopy (>=2.4.1,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

